--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="login">登录</string>
     <string name="work_order">工单</string>
     <string name="contacts">联系人</string>
-    <string name="workbenches">工作台\n</string>
-    <string name="settings">设置\n</string>
+    <string name="workbenches">工作台</string>
+    <string name="settings">设置</string>
 
 
 </resources>
